--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <title></title>
 <div style="background: 1px solid #FF0000; color: blackt-size: 20px; font-weight: bold; letter-spacing: 0,5em; padding: 10px;">
 
-<marquee direction="left" scrollamount="6" align="center">PETA JENIS TANAH ACRISOL/GAMBUT DI INDONESIA</marquee>
+<marquee direction="left" scrollamount="6" align="center">PETA JENIS TANAH ACRISOL/LEMPUNG DI INDONESIA</marquee>
 
 </div>
     </head>
